@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                              parseArgs.c                                */
-/* Original code written by Daniel Hawkins. Last modified on 2015-12-19.   */
+/* Original code written by Daniel Hawkins. Last modified on 2015-12-23.   */
 /*                                                                         */
 /* The file defines the argument parsing functions.                        */
 /*                                                                         */
@@ -80,9 +80,6 @@ int parseArgs(char **flagArgs, int flagCount){
                 }
                 settings.output_file = flagArgs[parseCount];
             }
-            else if (*cur_flag == 'O' || strcmp(cur_flag, "-stdout") == 0){
-                settings.flags |= FLAG_PRINT_STDOUT;
-            }
             else if (*cur_flag == 'f' || strcmp(cur_flag, "-log-file") == 0){
                 if (++parseCount == flagCount){
                     log_event(ERROR, "%s flag needs a file name.", flagArgs[parseCount - 1]);
@@ -153,8 +150,7 @@ void help_message(){
     puts("  -h --help                 Prints this help message.");
     puts("  -x --exclude [directory]  Excludes [directory] from the search.");
     puts("  -X --exclude-path [path]  Excludes [path] from the search. Can be a specific file.");
-    puts("  -o --output [filename]    Sets the name (and path) of the output file. Default is searchResults.txt.");
-    puts("  -O --stdout               Sets the output to stdout. Overrides -o and --output.");
+    puts("  -o --output [filename]    Sets the name (and path) of the output file. Default prints to stdout.");
     puts("  -f --log-file [filename]  Sets the name (and path) of the log file. Default is fileperuser.log.");
     puts("  -l --loglevel [level]     Sets the minimum log level to be recorded to file. Must be an integer. Default is 2 (WARNING).");
     puts("  -p --printlevel [level]   Sets the minimum log level to be displayed on-screen. Must be an integer. Default is 2 (WARNING).");
